--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,7 +8,7 @@ archives:
 - replacements:
     darwin: Darwin
     linux: Linux
-    # windows: Windows
+    windows: Windows
     386: i386
     amd64: x86_64
 changelog:
